--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
     <footer>
         <p>
-            Site criado por <strong><a href="#">Gustavo Guanabara</a></strong> para o <strong><a href="#">CursoemVideo</a></strong>.
+            Site criado por <strong><a href="#">Wecton Guimarães</a></strong> para o <strong><a href="#">Instagram</a></strong>.
         </p>
     </footer>
     
