--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <nav>
             <a href="#">Home</a>
             <a href="#">Noticias</a>
-            <a href="#">Curiosidades</a>
-            <a href="#">Fale Conosco</a>
+            <a href="#">Contato</a>
+            
        </nav>
    
 
@@ -146,7 +146,7 @@
 
     <footer>
         <p>
-            Site criado por <strong><a href="#">Wecton Guimarães</a></strong> para o <strong><a href="#">Instagram</a></strong>.
+            Site criado por <strong><a href="#"> Wecton Guimarães</a></strong> para o <strong><a href="#">Instagram</a></strong>.
         </p>
     </footer>
     
